@@ -2,7 +2,6 @@ package com.github.scribejava.apis.service;
 
 import com.github.scribejava.apis.ImgurApi;
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.model.OAuthRequest;
@@ -33,9 +32,8 @@ public class ImgurOAuthServiceImpl extends OAuth20Service {
     }
 
     @Override
-    public void signRequest(OAuth2AccessToken accessToken, OAuthRequest request) {
+    public void signRequest(String accessToken, OAuthRequest request) {
         request.addHeader("Authorization",
-                accessToken == null
-                        ? "Client-ID " + getConfig().getApiKey() : "Bearer " + accessToken.getAccessToken());
+                accessToken == null ? "Client-ID " + getConfig().getApiKey() : "Bearer " + accessToken);
     }
 }
